fix productCard image bleeding outside container

--- a/src/components/productCard/ProductCard.scss
+++ b/src/components/productCard/ProductCard.scss
@@ -39,6 +39,8 @@
 		flex-grow: 1;
 
 		img {
+			height: 100%;
+			width: 100%;
 			max-width: 260px;
 			max-height: 260px;
 		}
